liked video page

--- a/src/App.css
+++ b/src/App.css
@@ -49,5 +49,14 @@
 }
 
 
+/* liked videos page */
+
+#likedvideomaindiv{
+ background-image: url(https://wallpapercave.com/wp/WsnABiF.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+
 
 /* https://wallpapercave.com/wp/wp9175828.jpg */
